# llm-factory

./: .gitattributes  Dockerfile  README.md  pyproject.toml  slurm_startup.sh  train_slurm.sh
config/: domain.json  llm_config.md  role_id.json  tool.json
dataset/agents/agents_eng/: Academic_disciplines.json  Activism.json  Activists.json  Actors.json  Aerobic_exercise.json  Aerospace_engineering.json  Aesthetics.json  Africa.json  Agnosticism.json  Agriculture.json  Agronomy.json  Air_sports.json  Algebra.json  Allah.json  Almanacs.json  Alter_egos.json  Alternative_medicine.json  America.json  American_football.json  Amino_acids.json  Analysis_of_variance.json  Animals.json  Animation.json  Animism.json  Anthropology.json  Application_software.json  Applied_mathematics.json  Archaeology.json  Architecture.json  Archives.json  Arguments.json  Arithmetic.json  Artificial_intelligence.json  Arts.json  Asia.json  Association_football.json  Astronauts.json  Astronomy.json  Atheism.json  Atlases.json  (+652 more)
dataset/agents/agents_rus/: Academic_disciplines.json  Activism.json  Activists.json  Actors.json  Aerobic_exercise.json  Aerospace_engineering.json  Aesthetics.json  Africa.json  Agnosticism.json  Agriculture.json  Agronomy.json  Air_sports.json  Algebra.json  Allah.json  Almanacs.json  Alter_egos.json  Alternative_medicine.json  America.json  American_football.json  Amino_acids.json  Analysis_of_variance.json  Animals.json  Animation.json  Animism.json  Anthropology.json  Application_software.json  Applied_mathematics.json  Archaeology.json  Architecture.json  Archives.json  Arguments.json  Arithmetic.json  Artificial_intelligence.json  Arts.json  Asia.json  Association_football.json  Astronauts.json  Astronomy.json  Atheism.json  Atlases.json  (+652 more)
dataset/agents/agents_temp_03_big/: Academic_disciplines.json  Activism.json  Activists.json  Allah.json  (+686 more)
script/: __init__.py  add_meta_agents.py  agent_deduplicator.py  agent_generator.py  build_sft_train.py  dataset_curator.py  task_generator.py  train_qwen4b_lora.py
train/: sft_train_agents_eng.jsonl  sft_train_agents_rus.jsonl  sft_train_agents_temp_03_big.jsonl
(+2079 files in other folders)
